# brainfuck

./: .gitignore  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Instruction.cpp  Instruction.def  Instruction.h  Interpreter.cpp  Interpreter.h  ObjGen.cpp  ObjGen.h  Parser.cpp  Parser.h  Readme.md  bfc.cpp  libbrainfuck.cpp
test/: hello.b
